<resources>
    <string name="app_name">Card Visit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BünyaminKiremit</string>
    <string name="nav_header_subtitle">kiremitbunyamin@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Çıkış Yap</string>

    <string name="menu_home">Ana Sayfa</string>
    <string name="menu_family">Aile</string>
    <string name="menu_school">Okul</string>
    <string name="menu_friend">Arkadaş</string>
    <string name="menu_work">İş</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>