<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cardvisit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_family"
        android:name="com.example.cardvisit.ui.family.FamilyFragment"
        android:label="@string/menu_family"
        tools:layout="@layout/fragment_family" />
    <fragment
        android:id="@+id/nav_friend"
        android:name="com.example.cardvisit.ui.friend.FriendFragment"
        android:label="@string/menu_friend"
        tools:layout="@layout/fragment_friend" />
    <fragment
        android:id="@+id/nav_school"
        android:name="com.example.cardvisit.ui.school.SchoolFragment"
        android:label="@string/menu_school"
        tools:layout="@layout/fragment_school" />
    <fragment
        android:id="@+id/nav_work"
        android:name="com.example.cardvisit.ui.work.WorkFragment"
        android:label="@string/menu_work"
        tools:layout="@layout/fragment_work" />

</navigation>